--- a/flyer/index.html
+++ b/flyer/index.html
@@ -39,19 +39,34 @@
                 <a title="Directions to the Conference" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
+                <a class="current" title="Contáctanos" href="flyer">Cont&aacute;ctanos</a>
             </td>
         </tr>
     </table>
 
     <br>
-
-    <p>
-        I got lazy on this page and didn&rsquo;t mock up any template flyers for this template website.
-        So these are the flyers that <a target="_blank" href="https://math.jonathanalcaraz.com/">Jonathan Alcaraz</a>
-        designed for <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>.
-        Click on the color or grayscale flyer below to download a pdf.
+    <h1 style="text-align: center;"><a style="color: #ff6344;">Contactanos</a></h1>
+    <p style="text-align: center;">
+        Si tienes preguntas sobre la 5ta Semana de la Geofísica, no dudes en comunicarte con nosotros. El equipo organizador estará disponible para resolver todas las dudas acerca del evento.
     </p>
+    <p>
+
+    </p>
+    <p style="text-align: center;">
+  Información de contacto:
+</p>
+
+<p style="text-align: center;">
+  Paul Goyes = <a href="mailto:ypgoype@correo.uis.edu.co" style="color: #ff6344;">ypgoype@correo.uis.edu.co</a>
+</p>
+
+<p style="text-align: center;">
+  Grupo HDSP = <a href="mailto:hdsp@uis.edu.co" style="color: #ff6344;">hdsp@uis.edu.co</a>
+</p>
+
+<p style="text-align: center;">
+  Ana Mantilla = <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a>
+</p>
 
     <table class="flyers">
         <tr>
