agregué una tilde

--- a/flyer/index.html
+++ b/flyer/index.html
@@ -45,7 +45,7 @@
     </table>
 
     <br>
-    <h1 style="text-align: center;"><a style="color: #ff6344;">Contactanos</a></h1>
+    <h1 style="text-align: center;"><a style="color: #ff6344;">Contáctanos</a></h1>
     <p style="text-align: center;">
         Si tienes preguntas sobre la 5ta Semana de la Geofísica, no dudes en comunicarte con nosotros. El equipo organizador estará disponible para resolver todas las dudas acerca del evento.
     </p>
