--- a/flyer/index.html
+++ b/flyer/index.html
@@ -51,38 +51,30 @@
     </p>
     <p>
 
-    </p>
-    <p style="text-align: center;">
-  Información de contacto:
-</p>
+                <h3 style="color: #ff6344; margin: 30px 0 15px; text-align: center;">
+                    Información de contacto:
+                </h3>
 
-<p style="text-align: center;">
-  Paul Goyes = <a href="mailto:ypgoype@correo.uis.edu.co" style="color: #ff6344;">ypgoype@correo.uis.edu.co</a>
-</p>
+                <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co" style="color: #ff6344;">ypgoype@correo.uis.edu.co</a></p>
+                <p>📧 Grupo HDSP — <a href="mailto:hdsp@uis.edu.co" style="color: #ff6344;">hdsp@uis.edu.co</a></p>
+                <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a></p>
+            </div>
+        </div>
 
-<p style="text-align: center;">
-  Grupo HDSP = <a href="mailto:hdsp@uis.edu.co" style="color: #ff6344;">hdsp@uis.edu.co</a>
-</p>
 
-<p style="text-align: center;">
-  Ana Mantilla = <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a>
-</p>
-
+    <!-- Flyers -->
     <table class="flyers">
         <tr>
-            <td class="flyer">
-                <a href="assets/MathConnections-Flyer.pdf">
-                    <img src="assets/MathConnections-Flyer.png" alt="MathConnections Color Flyer" style="width:100%">
-                </a>
+            <td class="flyer" style="padding: 10px;">
+                <img src="assets/Flyer1.png" alt="Flyer 1" style="width:100%">
             </td>
-            <td class="flyer">
-                <a href="assets/MathConnections-FlyerBW.pdf">
-                    <img src="assets/MathConnections-FlyerBW.png" alt="MathConnections BW Flyer" style="width:100%">
-                </a>
+            <td class="flyer" style="padding: 10px;">
+                <img src="assets/Flyer2.png" alt="Flyer 2" style="width:100%">
             </td>
         </tr>
     </table>
 
+    <!-- Footer -->
     <footer>
         &copy; Conference Organizers
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
