--- a/flyer/index.html
+++ b/flyer/index.html
@@ -47,7 +47,17 @@
     <br>
     <h1 style="text-align: center;"><a style="color: #ff6344;">Contáctanos</a></h1>
     <p style="text-align: center;">
-        Si tienes preguntas sobre la 5ta Semana de la Geofísica, no dudes en comunicarte con nosotros. El equipo organizador estará disponible para resolver todas las dudas acerca del evento.
+         <!-- Sección Contacto -->
+        <div class="contact-section" style="margin: 40px 0;">
+            <h1 style="color: #ff6344; text-align: center; margin-bottom: 20px;">Contáctanos</h1>
+            
+            <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+                <p>
+                    Para más información y cualquier consulta, no dude en contactar a los organizadores: 
+                    <strong>Paul Goyes, Grupo HDSP y Ana Mantilla</strong>. 
+                    Estamos a su disposición para ayudarle y brindarle todo el apoyo necesario 
+                    para que su participación en la 5a Semana de la Geofísica sea exitosa.
+                </p>
     </p>
     <p>
 
