--- a/flyer/index.html
+++ b/flyer/index.html
@@ -45,7 +45,7 @@
     </table>
 
     <br>
-    <h1 style="text-align: center;"><a style="color: #ff6344;">Contáctanos</a></h1>
+   
     <p style="text-align: center;">
          <!-- Sección Contacto -->
         <div class="contact-section" style="margin: 40px 0;">
@@ -54,7 +54,7 @@
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
                 <p>
                     Para más información y cualquier consulta, no dude en contactar a los organizadores: 
-                    <strong>Paul Goyes, Grupo HDSP y Ana Mantilla</strong>. 
+                    <strong>Ana Mantilla, Paul Goyes y Grupo HDSP</strong>. 
                     Estamos a su disposición para ayudarle y brindarle todo el apoyo necesario 
                     para que su participación en la 5a Semana de la Geofísica sea exitosa.
                 </p>
@@ -65,9 +65,10 @@
                     Información de contacto:
                 </h3>
 
+                <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a></p>
                 <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co" style="color: #ff6344;">ypgoype@correo.uis.edu.co</a></p>
                 <p>📧 Grupo HDSP — <a href="mailto:hdsp@uis.edu.co" style="color: #ff6344;">hdsp@uis.edu.co</a></p>
-                <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a></p>
+                
             </div>
         </div>
 
