--- a/registration/index.html
+++ b/registration/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <base href="..">
+    <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
@@ -10,6 +11,72 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <title>Registration | Conference Template</title>
+
+<style>
+/* ----- Párrafos en una sola columna ----- */
+body p {
+  max-width: 1600px;   /* mismo ancho que la sección de abajo */
+  width: 100%;
+  margin: 0 auto;
+  font-size: 1.1em;
+}
+
+/* ----- Contenedor de dos columnas ----- */
+.topics-dates {
+  display: flex;
+  gap: 0 px;
+  align-items: flex-start;
+  max-width: 1600px;   /* mismo ancho que body p */
+  margin: 0 auto;
+}
+
+/* ----- Anchos de cada columna interna ----- */
+.topics-dates .topics  { flex: 0 0 40%; }
+.topics-dates .dates   { flex: 0 0 30%; }
+
+/* ----- Negrillas y tabla ----- */
+strong, b, th { font-weight: 800; color: #222; }
+
+.topics-dates .topics h2,
+.topics-dates .dates h2 { color: #000; font-weight: 900; }
+
+.topics-dates table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.topics-dates th,
+.topics-dates td {
+  padding: 6px 8px;
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+}
+
+
+.topics ul {
+  list-style: none;       /* quitamos viñetas nativas */
+  padding-left: 0;        /* sin sangría automática */
+}
+
+.topics ul li {
+  margin-bottom: 15px;    /* espacio entre temas */
+  line-height: 1.5;
+  position: relative;
+  padding-left: 20px;     /* espacio para el puntico */
+}
+
+/* Puntico manual */
+.topics ul li::before {
+  content: "•";           /* el punto */
+  position: absolute;
+  left: 0;
+  color: #000;            /* color negro */
+  font-size: 1.2em;       /* tamaño del punto */
+  line-height: 1;
+}
+</style>
+
+
+    
 </head>
 
 <body>
@@ -26,38 +93,79 @@
 
     <table class="navigation">
         <tr>
-            <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
-            </td>
-            <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
-            </td>
-            <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
+            <td class="navigation"><a title="Conference Home Page" href=".">Home</a></td>
+            <td class="navigation"><a class="current" title="Register for the Conference" href="registration">Registration</a></td>
+            <td class="navigation"><a title="Conference Program" href="program">Program</a></td>
+            <td class="navigation"><a title="Directions to the Conference" href="directions">Directions</a></td>
+            <td class="navigation"><a title="Conference Flyer" href="flyer">Flyer</a></td>
         </tr>
     </table>
 
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your conference.
-        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
-        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
+        La 5a Semana de la Geofísica tendrá lugar en Bucaramanga, Santander,
+        también conocida como la "Ciudad bonita",
+        destacada por su notable cantidad de parques y zonas verdes; puerta de entrada a algunos de los paisajes más espectaculares de
+        los Andes colombianos. La Semana de la Geofísica es un evento que
+        explora los últimos avances en temas de exploración y monitoreo geofísico,
+        aplicaciones de inteligencia artificial y ciencia de datos en geociencias,
+        energías renovables y transición energética, gestión de riesgos naturales
+        y cambio climático, así como innovación en inversión geofísica, sismología 
+        y agrogeofísica.
     </p>
-    <!--
-    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    -->
+
     <p>
-        Here&rsquo;s another paragraph of filler text:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        Para realizar el proceso de inscripción se usa un 
+        <a href="https://www.google.com/forms/about/">formulario de Google</a>, 
+        dentro del cual encontrará las respectivas indicaciones para proceder adecuadamente.  
+        El único requisito necesario para su inscripción al evento es la diligenciación del <em>abstract</em> de su trabajo.
     </p>
+
+    <!-- ======= Sección en dos columnas ======= -->
+    <section class="topics-dates">
+      
+      <!-- Columna izquierda: Temas -->
+      <div class="topics">
+        <h2>Temas de Interés</h2>
+        <ul>
+          <li><strong>Métodos potenciales y electromagnéticos:</strong> Avances en gravimetría, magnetometría, electromagnetismo <br>aplicado a la exploración, energías limpias y monitoreo ambiental.</li>
+          <li><strong>Diseño de geometrías de adquisición:</strong> Estrategias de diseño en métodos sísmicos, potenciales y electromagnéticos, mediante inteligencia artificial y evaluación de la iluminación del subsuelo.</li>
+          <li><strong>Inteligencia artificial en problemas geofísicos y geológicos:</strong> Aprendizaje profundo, machine learning<br> y técnicas híbridas en problemas de exploración, modelado e interpretación.</li>
+          <li><strong>Geofísica para el recobro mejorado y almacenamiento de CO₂:</strong> Métodos de monitoreo geofísico en<br> procesos de recobro, inyección de fluidos y tecnologías de transición energética.</li>
+          <li><strong>Modelos de lenguaje natural en geociencias:</strong> Procesamiento de datos textuales, minería de literatura<br> científica y aplicaciones en gestión de conocimiento geofísico y geológico.</li>
+          <li><strong>Gestión del riesgo y de las amenazas naturales:</strong> Métodos geofísicos e integrados para prevención,<br> monitoreo y mitigación de amenazas naturales y antropogénicas.</li>
+          <li><strong>Teledetección en geología ambiental:</strong> Aplicaciones de sensores satelitales, drones y radar en gestión<br> del riesgo, recursos hídricos y geología ambiental.</li>
+          <li><strong>Teoría y aplicaciones de la inversión geofísica:</strong> Avances en algoritmos, enfoques bayesianos, inversa<br> sísmica y regularización con modelos físicos y de aprendizaje automático.</li>
+          <li><strong>Aportes en sismología:</strong> Monitoreo de sismos, caracterización de fallas activas, modelos del subsuelo,<br> riesgos sísmicos y nuevas aproximaciones de modelado.</li>
+          <li><strong>Geofísica en energías renovables y transición energética:</strong> Aplicaciones en geotermia, hidrógeno<br> subterráneo, energía eólica y solar, con énfasis en la caracterización del subsuelo y el almacenamiento.</li>
+          <li><strong>Geofísica y cambio climático:</strong> Uso de métodos geofísicos, ciencia de datos e inteligencia<br> artificial para estudiar el cambio climático.</li>
+          <li><strong>Agrogeofísica:</strong> Aplicación de métodos geofísicos al estudio de suelos, agricultura de precisión,<br> monitoreo de nutrientes y sostenibilidad agroambiental.</li>
+        </ul>
+      </div>
+
+      <!-- Columna derecha: Fechas -->
+      <div class="dates">
+        <h2>Fechas Importantes</h2>
+        <table>
+          <thead>
+            <tr><th>Evento</th><th>Fecha</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+            <tr><td>-</td><td>-</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <!-- ======================================= -->
 
     <footer>
         &copy; Conference Organizers
@@ -66,4 +174,3 @@
 
 </body>
 </html>
-
