--- a/registration/index.html
+++ b/registration/index.html
@@ -73,6 +73,25 @@ strong, b, th { font-weight: 800; color: #222; }
   font-size: 1.2em;       /* tamaño del punto */
   line-height: 1;
 }
+
+.consultas {
+  max-width: 1600px;
+  margin: 30px auto;
+  padding: 20px;
+  background: #d9f2d9;     /* verde claro */
+  border: 2px solid #4caf50; /* verde más oscuro para el borde */
+  border-radius: 8px;        /* esquinas redondeadas */
+}
+
+.consultas h2 {
+  margin-top: 0;
+  color: black;  /* título en negro */
+  font-weight: 900;
+}
+
+.consultas p {
+  color: black;  /* texto en negro */
+}
 </style>
 
 
@@ -144,6 +163,9 @@ strong, b, th { font-weight: 800; color: #222; }
         </ul>
       </div>
 
+
+
+
       <!-- Columna derecha: Fechas -->
       <div class="dates">
         <h2>Fechas Importantes</h2>
@@ -167,6 +189,14 @@ strong, b, th { font-weight: 800; color: #222; }
     </section>
     <!-- ======================================= -->
 
+<div class="consultas">
+  <h2>Consultas</h2>
+  <p>
+    Todas las consultas relacionadas con el evento deben enviarse al correo 
+    <a href="mailto:ana.mantilla@correo.uis.edu.co ">ana.mantilla@correo.uis.edu.co </a>, <a href="mailto:ypgoype@correo.uis.edu.co ">ypgoype@correo.uis.edu.co </a> o <a href="mailto:hdsp@uis.edu.co ">hdsp@uis.edu.co </a> .  
+    El equipo organizador atenderá cualquier inquietud sobre inscripciones, envíos de resúmenes o información general.
+  </p>
+</div>
     <footer>
         &copy; Conference Organizers
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
