--- a/directions/index.html
+++ b/directions/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang='es'>
 
+
+
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets\hdsplogo.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets\main.css"/>
     <meta name="description" content="Conference Template">
     <meta name="keywords" content="Conference">
+    <meta name="resource-type" content="document">
+    <meta name="distribution" content="global">
     <title>5TA SEMANA DE LA GEOFISICA</title>
 </head>
 
 <body>
-
     <div class="banner">
-        <img src="assets\minciencias-logo-hd.png" width="100" height="100" alt="MIN CIENCIAS LOGO"/>
-        <img src="assets\uis-logo-HD.png" width="140" height="70" alt="UIS LOGO" align="right"/>
+        <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1" style="display:block; margin-bottom:45px;">5TA SEMANA DE LA</span>
+            <span class="title1" style="display:block;">5TA SEMANA DE LA</span>
             <span class="title2" style="display:block;">GEOFISICA</span>
+        </div>
+        <div class="bottom-right">
+            June 31, 2525 <br> University Name, and City Maybe
         </div>
     </div>
 
-        <!-- Menú de navegación -->
 
+
+        <!-- Menú de navegación -->
 
 
     <table class="navigation">
@@ -81,6 +87,10 @@
         <img src="assets\hdsplogo.png" width="100" height="100" alt="HDSP LOGO" align="left" style="padding-right: 20px;"/>
         <img src="assets\anh-logo-HD.svg" width="100" height="70" alt="GIDCO LOGO" align="right" style="padding-right: 20px;"/>
     </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
