--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 
   <h2>Bienvenido a la 5° Semana de la Geofísica</h2>
 
-  <p>
+  <p style="text-align: justify;">  
     Es un gran honor invitarte a la <strong>quinta edición de la Semana de la Geofísica</strong>, 
     que tendrá lugar del <strong>4 al 8 de noviembre de 2024</strong> en las instalaciones de la 
-    <strong>Universidad Industrial de Santander (UIS)</strong>. Este evento, reúne a destacados <strong>expertos nacionales e internacionales</strong>, 
+    <strong>Universidad Industrial de Santander (UIS)</strong>. Este evento, reúne a destacados expertos nacionales e internacionales, 
     estudiantes, profesionales e investigadores apasionados por la <strong>geofísica, la inteligencia artificial 
     y la geología ambiental</strong>, en un espacio académico, científico y social único en el país.
   </p>
 
-  <p>
-    La Semana de la Geofísica se consolida como el encuentro más importante en su campo a nivel nacional, 
+  <p style="text-align: justify;">
+    La 5° Semana de la Geofísica se consolida como el encuentro más importante en su campo a nivel nacional, 
     donde confluyen la innovación, la interdisciplinariedad y la búsqueda de soluciones para los retos actuales 
     en exploración, monitoreo ambiental, transición energética y gestión del riesgo. Durante cinco días, 
     podrás disfrutar de <strong>conferencias magistrales, sesiones temáticas, presentaciones orales y de pósters</strong>, 
@@ -91,7 +91,11 @@
   </p>
 
   <h2>Líneas temáticas</h2>
-  <ul>
+  <p style="text-align: justify;">
+    La 5° Semana de la Geofísica abordará una variedad de temas relevantes y actuales, 
+    incluyendo pero no limitándose a:
+  </p>
+  <ul style="text-align: justify;">
     <li><strong>Métodos potenciales y electromagnéticos</strong> aplicados a exploración, energías limpias y monitoreo ambiental.</li>
     <li><strong>Diseño de geometrías de adquisición</strong> en métodos sísmicos y electromagnéticos apoyados en IA.</li>
     <li><strong>Aplicaciones de inteligencia artificial</strong> en problemas geofísicos y geológicos.</li>
@@ -104,28 +108,28 @@
     <li><strong>Geofísica en energías renovables y cambio climático</strong>.</li>
   </ul>
 
-  <p>
+  <p style="text-align: justify;">
     Además de su programa académico, el evento contará con actividades sociales y de integración, 
     diseñadas para fortalecer redes de colaboración y fomentar un ambiente dinámico y enriquecedor 
     para todos los participantes.
   </p>
 
-  <p>
+  <p style="text-align: justify;">
     La <strong>5° Semana de la Geofísica</strong> es más que un congreso: es una experiencia para aprender, 
     compartir y construir juntos el futuro de la geociencia en Colombia.
   </p>
 
-  <p><strong>👉 ¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
+  <p><strong>¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
 
   <h2>Organizadores</h2>
     <div class="contacto">
-    <strong>Paul Goyes Peñafiel</strong><br>
-    Contacto: <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a>
+    <strong>Ana Gabriela Mantilla Dulcey</strong><br>
+    Contacto: <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a>
     </div><br>
 
     <div class="contacto">
-    <strong>Ana María Martínez</strong><br>
-    Contacto: <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a>
+    <strong>Paul Yesid Goyes Peñafiel</strong><br>
+    Contacto: <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a>
     </div><br>
 
     <div class="contacto">
@@ -139,12 +143,12 @@
     <tr>
       <td class="sponsor">
         <a href="http://www.eyebleach.me/">
-          <img src="assets/Paul.jpeg" alt="First Sponsor Name">
+          <img src="assets/Ana.jpeg" alt="Second Sponsor Name">
         </a>
       </td>
       <td class="sponsor">
         <a href="http://www.eyebleach.me/">
-          <img src="assets/Ana.jpeg" alt="Second Sponsor Name">
+          <img src="assets/Paul.jpeg" alt="First Sponsor Name">
         </a>
       </td>
       <td class="sponsor">
