global css update

--- a/flyer/index.html
+++ b/flyer/index.html
@@ -26,11 +26,11 @@
 
     <table class="navigation">
         <tr>
-        <td class="navigation"><a class="current" title="Conference Home Page" href=".">Inicio</a></td>
+        <td class="navigation"><a title="Conference Home Page" href=".">Inicio</a></td>
         <td class="navigation"><a title="Register for the Conference" href="registration">Registro</a></td>
         <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
         <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
-        <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
+        <td class="navigation"><a class="current" title="Conference Flyer" href="flyer">Contacto</a></td>
         </tr>
     </table>
 
@@ -38,10 +38,10 @@
    
     <p style="text-align: center;">
          <!-- Sección Contacto -->
-        <div class="contact-section" style="margin: 40px 0;">
-            <h1 style="color: #ff6344; text-align: center; margin-bottom: 20px;">Contáctanos</h1>
+        <div class="contact-section">
+            <h1>Contáctanos</h1>
             
-            <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+            <div class="contact-content">
                 <p>
                     Para más información y cualquier consulta, no dude en contactar a los organizadores: 
                     <strong>Ana Mantilla, Paul Goyes y Grupo HDSP</strong>. 
@@ -51,13 +51,11 @@
     </p>
     <p>
 
-                <h3 style="color: #ff6344; margin: 30px 0 15px; text-align: center;">
-                    Información de contacto:
-                </h3>
+                <h3>Información de contacto:</h3>
 
-                <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co" style="color: #ff6344;">ana.mantilla@correo.uis.edu.co</a></p>
-                <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co" style="color: #ff6344;">ypgoype@correo.uis.edu.co</a></p>
-                <p>📧 Grupo HDSP — <a href="mailto:hdsp@uis.edu.co" style="color: #ff6344;">hdsp@uis.edu.co</a></p>
+                <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></p>
+                <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></p>
+                <p>📧 Grupo HDSP — <a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></p>
                 
             </div>
         </div>
@@ -66,11 +64,11 @@
     <!-- Flyers -->
     <table class="flyers">
         <tr>
-            <td class="flyer" style="padding: 10px;">
-                <img src="assets/Flyer1.png" alt="Flyer 1" style="width:100%">
+            <td class="flyer">
+                <img src="assets/Flyer1.png" alt="Flyer 1">
             </td>
-            <td class="flyer" style="padding: 10px;">
-                <img src="assets/Flyer2.png" alt="Flyer 2" style="width:100%">
+            <td class="flyer">
+                <img src="assets/Flyer2.png" alt="Flyer 2">
             </td>
         </tr>
     </table>
