--- a/program/index.html
+++ b/program/index.html
@@ -26,9 +26,9 @@
 
     <table class="navigation">
         <tr>
-        <td class="navigation"><a class="current" title="Conference Home Page" href=".">Inicio</a></td>
+        <td class="navigation"><a title="Conference Home Page" href=".">Inicio</a></td>
         <td class="navigation"><a title="Register for the Conference" href="registration">Registro</a></td>
-        <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
+        <td class="navigation"><a class="current" title="Conference Program" href="program">Programa</a></td>
         <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
         <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
         </tr>
