--- a/index.html
+++ b/index.html
@@ -83,39 +83,24 @@
   <p><strong>¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
 
   <h2>Organizadores</h2>
-    <div class="contacto">
-    <strong>Ana Gabriela Mantilla Dulcey</strong><br>
-    Contacto: <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a>
-    </div><br>
 
-    <div class="contacto">
-    <strong>Paul Yesid Goyes Peñafiel</strong><br>
-    Contacto: <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a>
-    </div><br>
-
-    <div class="contacto">
-    <strong>Grupo de investigación en Diseño de Algoritmos y Procesamiento de Datos Multidimensionales (HDSP)</strong><br>
-    Contacto: <a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a>
-    </div>
-
-
-  <!-- ===== Sponsors: las gatitas van aquí, NO en el banner ===== -->
+  <!-- ===== Organizers with photos ===== -->
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <a href="http://www.eyebleach.me/">
-          <img src="assets/Ana.jpeg" alt="Second Sponsor Name">
-        </a>
+        <img src="assets/Ana.jpeg" alt="Ana Gabriela Mantilla Dulcey">
+        <div class="sponsor-name">Ana Gabriela Mantilla Dulcey</div>
+        <div class="sponsor-email"><a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></div>
       </td>
       <td class="sponsor">
-        <a href="http://www.eyebleach.me/">
-          <img src="assets/Paul.jpeg" alt="First Sponsor Name">
-        </a>
+        <img src="assets/Paul.jpeg" alt="Paul Yesid Goyes Peñafiel">
+        <div class="sponsor-name">Paul Yesid Goyes Peñafiel</div>
+        <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
       </td>
       <td class="sponsor">
-        <a href="http://www.eyebleach.me/">
-          <img src="assets/HDSP.png" alt="Third Sponsor Name">
-        </a>
+        <img src="assets/HDSP.png" alt="Grupo HDSP">
+        <div class="sponsor-name">Grupo HDSP</div>
+        <div class="sponsor-email"><a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></div>
       </td>
     </tr>
   </table>
