--- a/flyer/index.html
+++ b/flyer/index.html
@@ -7,8 +7,8 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/custom-styles.css"/>
-  <meta name="description" content="Conference Template">
-  <title>Conference Template</title>
+  <meta name="description" content="Contacto - 5a Semana de la Geofísica">
+  <title>Contacto | 5a Semana de la Geofísica</title>
 </head>
 
 <body>
