--- a/registration/index.html
+++ b/registration/index.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/custom-styles.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Registro - 5a Semana de la Geofísica">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>Registro | 5a Semana de la Geofísica</title>
 </head>
 
 <body class="registration-page">
