--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
 
   <p><strong>¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
 
+  <h2>Novedades</h2>
+
+  <h3>Cómo subir tu resumen</h3>
+  <p style="text-align: justify;">
+    Para participar en la 5° Semana de la Geofísica con tu trabajo de investigación, 
+    debes enviar tu resumen siguiendo las instrucciones de registro. 
+  </p>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/temas.png" alt="Temas de la 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+    <div class="flyer-container">
+      <img src="assets/registration.png" alt="Registro 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
