--- a/registration/index.html
+++ b/registration/index.html
@@ -92,7 +92,7 @@
             <tr><th>Evento</th><th>Fecha</th></tr>
           </thead>
           <tbody>
-            <tr><td>-</td><td>-</td></tr>
+            <tr><td>Recepción de resúmenes para posters</td><td>21 de octubre</td></tr>
             <tr><td>-</td><td>-</td></tr>
             <tr><td>-</td><td>-</td></tr>
             <tr><td>-</td><td>-</td></tr>
