--- a/directions/index.html
+++ b/directions/index.html
@@ -37,7 +37,7 @@
     <h2>Mapa de la UIS</h2>
 
     <img class="center" src="assets\MapaUIS-2024.png" alt="Universidad Industrial de Santander" id="kitten">
-    
+    <p class="text-center"><a href="https://uis.edu.co/mapa/" target="_blank" rel="noopener noreferrer">Ver mapa interactivo de la UIS</a></p>
 
     <h2>Sobre la UIS</h2>
     <p class = "texto">
